# rust_oauth2

./: .dockerignore  .env.example  .gitignore  .markdownlint.jsonc  AGENTIC_QUICKSTART.md  Cargo.toml  DOCKERHUB.md  Dockerfile  Dockerfile.ci  Dockerfile.prebuilt  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  SUMMARY.md  TODO.md  application.conf.example  docker-compose.observability.kind.yml  docker-compose.observability.yml  docker-compose.yml  mkdocs.yml  requirements-docs.txt
.cargo/: audit.toml
.github/agents/: security.md
.github/scripts/: bump_cargo_version.py
.github/workflows/: ci.yml  e2e-kind-extended.yml  e2e-kind.yml  release.yml
.kube/: kind-kubeconfig
crates/oauth2-actix/: Cargo.toml
crates/oauth2-actix/src/: lib.rs
crates/oauth2-actix/src/actors/: auth_actor.rs  client_actor.rs  token_actor.rs
crates/oauth2-actix/src/handlers/: admin.rs  client.rs  events.rs  mod.rs  oauth.rs  token.rs  wellknown.rs
crates/oauth2-actix/src/middleware/: auth_middleware.rs
crates/oauth2-config/: Cargo.toml
crates/oauth2-config/src/: lib.rs
crates/oauth2-core/: Cargo.toml
crates/oauth2-core/src/: lib.rs
crates/oauth2-core/src/models/: authorization.rs  client.rs  error.rs  mod.rs  scope.rs  token.rs  user.rs
crates/oauth2-events/: Cargo.toml
crates/oauth2-events/src/: actix_bus.rs  bus.rs  envelope.rs  event_actor.rs  event_types.rs  lib.rs  plugins.rs
crates/oauth2-events/src/backends/: kafka.rs  mod.rs  rabbit.rs  redis_streams.rs
crates/oauth2-observability/: Cargo.toml
crates/oauth2-observability/src/: actix.rs  lib.rs  metrics.rs  storage.rs  telemetry.rs
crates/oauth2-openapi/: Cargo.toml
crates/oauth2-openapi/src/: lib.rs
crates/oauth2-ports/: Cargo.toml
crates/oauth2-ports/src/: lib.rs  storage.rs
crates/oauth2-server/: Cargo.toml
crates/oauth2-server/src/: lib.rs
crates/oauth2-social-login/: Cargo.toml
crates/oauth2-social-login/src/: lib.rs  models.rs  service.rs
crates/oauth2-social-login/src/handlers/: auth.rs
crates/oauth2-storage-factory/: Cargo.toml
crates/oauth2-storage-factory/src/: lib.rs
crates/oauth2-storage-mongo/: Cargo.toml
crates/oauth2-storage-mongo/src/: lib.rs
crates/oauth2-storage-sqlx/: Cargo.toml
crates/oauth2-storage-sqlx/src/: lib.rs  sqlx.rs
docs/: eventing.md  index.md
docs/admin/: clients.md  dashboard.md  tokens.md
docs/api/: authentication.md  endpoints.md  errors.md  openapi.md
docs/architecture/: actors.md  database.md  overview.md
docs/assets/openapi/: openapi.json
docs/assets/stylesheets/: extra.css
docs/deployment/: docker.md  dockerhub.md  kubernetes.md  production.md
docs/development/: cicd.md  contributing.md  testing.md
docs/examples/: eventing.md  service-to-service.md
docs/flows/: authorization-code.md  client-credentials.md  password.md  refresh-token.md
docs/getting-started/: configuration.md  installation.md  quickstart.md  social-login-setup.md
docs/observability/: health.md  logging.md  metrics.md  slos.md  tracing.md
docs/operations/: runbooks.md
examples/resource-server-node/: Dockerfile  README.md  package.json  server.js
k8s/: README.md
k8s/base/: configmap-migrations.yaml  deployment.yaml  flyway-migration-job.yaml  kustomization.yaml
k8s/components/observability/: grafana-deployment.yaml  grafana-service.yaml  jaeger-deployment.yaml  jaeger-service.yaml  kustomization.yaml  otel-collector-deployment.yaml  otel-collector-service.yaml  prometheus-deployment.yaml  prometheus-service.yaml
k8s/components/observability/assets/prometheus/rules/: oauth2_server_alerts.yml
k8s/components/observability/grafana/provisioning/dashboards/: dashboards.yml
k8s/components/observability/prometheus/: prometheus.incluster.yml
k8s/components/resource-server/: deployment.yaml  kustomization.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/e2e-kind/: kustomization.yaml
k8s/overlays/e2e-kind-extended/: kustomization.yaml
k8s/overlays/e2e-kind-observability/: kustomization.yaml
k8s/overlays/e2e-kind-observability/patches/: oauth2-server-otel-env.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
migrations/sql/: V5__insert_default_data.sql
observability/: README.md
observability/grafana/dashboards/: oauth2-server-overview.json  oauth2-server-slos.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.kind.yml  prometheus.yml
observability/prometheus/rules/: oauth2_server_slos.yml
observability/slo/sloth/: oauth2-server.yml
scripts/: e2e_kind.sh  e2e_kind_extended.sh  generate_slo_rules.sh  kind_generate_traffic.sh  kind_up_observability.sh  migrate.sh  sync_incluster_observability_assets.sh
scripts/loadtest/: .client.json  README.md  requirements.txt  roauth2_load_test.py
scripts/smoke/: README.md  requirements.txt  roauth2_smoke.py
src/: lib.rs  main.rs  metrics.rs  openapi.rs  telemetry.rs
src/actors/: auth_actor.rs  client_actor.rs  mod.rs  token_actor.rs
src/config/: mod.rs
src/db/: mod.rs
src/events/: actix_bus.rs  bus.rs  envelope.rs  event_actor.rs  mod.rs  plugins.rs
src/events/backends/: kafka.rs  rabbit.rs  redis_streams.rs
src/handlers/: admin.rs  auth.rs  client.rs  events.rs  mod.rs  oauth.rs  token.rs  wellknown.rs
src/middleware/: auth_middleware.rs  metrics_middleware.rs  mod.rs
src/models/: authorization.rs  client.rs  error.rs  mod.rs  scope.rs  social.rs  token.rs  user.rs
src/services/: mod.rs  social_login.rs
src/storage/: mod.rs  mongo.rs  observed.rs  sqlx.rs
templates/: error.html  login.html
tests/: bdd.rs  integration.rs  migrations_postgres.rs  mongo_storage.rs  security_http.rs  storage_contract_sqlx.rs  storage_factory.rs  unit_tests.rs
tests/common/: mod.rs
tests/features/: authorization_code.feature  client_credentials.feature  error_handling.feature  password_grant.feature  pkce.feature  refresh_token.feature  token_introspection.feature  token_revocation.feature
