[package]
name = "rust_oauth2_server"
version = "0.1.0"
edition = "2021"
authors = ["Ian Lintner"]
description = "A complete OAuth2 server implementation using Actix-web and the actor model"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ianlintner/rust_oauth2_server"

[workspace]
members = [
	"crates/oauth2-core",
	"crates/oauth2-events",
	"crates/oauth2-ports",
	"crates/oauth2-storage-mongo",
	"crates/oauth2-storage-sqlx",
]

[dependencies]
# Extracted reusable crates
oauth2-core = { path = "crates/oauth2-core", features = ["actix", "sqlx", "openapi"] }
oauth2-events = { path = "crates/oauth2-events" }
oauth2-ports = { path = "crates/oauth2-ports" }
oauth2-storage-mongo = { path = "crates/oauth2-storage-mongo", optional = true }
oauth2-storage-sqlx = { path = "crates/oauth2-storage-sqlx" }

# Actix Web Framework
actix-web = "4.4"
actix-rt = "2.9"
actix = "0.13"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT handling
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

# Cryptography
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
argon2 = "0.5"
subtle = "2.5"
hex = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.15"
hocon = "0.9"

# Logging
env_logger = "0.11"
log = "0.4"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Database (SQLite for simplicity, can be extended)


# OpenAPI
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

# CORS
actix-cors = "0.7"

# Metrics and Observability
prometheus = "0.14"

# OpenTelemetry
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
tracing-actix-web = "0.7"
tracing-log = "0.2"

# Async utilities
futures = "0.3"
async-trait = "0.1"


# Admin UI templating
tera = "1.19"
actix-files = "0.6"

# Session management
actix-session = { version = "0.11", features = ["cookie-session"] }

# OAuth2 client for social logins
oauth2 = "5.0"
reqwest = { version = "0.13", features = ["json"] }
oauth2_reqwest = { package = "reqwest", version = "0.12", features = ["rustls-tls"] }

# Additional serialization
serde_urlencoded = "0.7"

[features]
# Keep the default build lightweight: SQL backends only.
default = []
mongo = ["oauth2-storage-mongo"]

# Optional eventing backends (Phase 1 best-effort)
events-redis = ["oauth2-events/events-redis"]
events-kafka = ["oauth2-events/events-kafka"]
events-rabbit = ["oauth2-events/events-rabbit"]

[lib]
name = "rust_oauth2_server"
path = "src/lib.rs"

[dev-dependencies]
# Testing
actix-rt = "2.9"
cucumber = { version = "0.22", features = ["macros"] }
futures = "0.3"
tempfile = "3"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "mongo"] }

# Used by integration tests (e.g., migrations and SQL-level assertions).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "chrono", "uuid", "macros", "migrate"] }

[[test]]
name = "bdd"
harness = false
