[package]
name = "rust_oauth2_server"
version = "0.0.4"
edition = "2021"
autolib = false
authors = ["Ian Lintner"]
description = "A complete OAuth2 server implementation using Actix-web and the actor model"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ianlintner/rust_oauth2_server"

[workspace]
members = [
	"crates/oauth2-actix",
	"crates/oauth2-config",
	"crates/oauth2-core",
	"crates/oauth2-server",
	"crates/oauth2-storage-factory",
	"crates/oauth2-openapi",
	"crates/oauth2-observability",
	"crates/oauth2-events",
	"crates/oauth2-ports",
	"crates/oauth2-social-login",
	"crates/oauth2-storage-mongo",
	"crates/oauth2-storage-sqlx",
]

[dependencies]
# Extracted reusable crates
oauth2-actix = { path = "crates/oauth2-actix" }
oauth2-config = { path = "crates/oauth2-config" }
oauth2-core = { path = "crates/oauth2-core", features = ["actix", "sqlx", "openapi"] }
oauth2-events = { path = "crates/oauth2-events" }
oauth2-openapi = { path = "crates/oauth2-openapi" }
oauth2-observability = { path = "crates/oauth2-observability", features = ["actix"] }
oauth2-ports = { path = "crates/oauth2-ports" }
oauth2-social-login = { path = "crates/oauth2-social-login" }
oauth2-server = { path = "crates/oauth2-server" }
oauth2-storage-factory = { path = "crates/oauth2-storage-factory" }

# Used by `src/bin/export_openapi.rs`.
serde_json = "1.0"
utoipa = "5"

# Runtime used only by the thin delegating binary (`src/main.rs`).
actix-rt = "2.9"

[features]
# Keep the default build lightweight: SQL backends only.
default = []
mongo = ["oauth2-server/mongo", "oauth2-storage-factory/mongo"]

# Optional eventing backends (Phase 1 best-effort)
events-redis = ["oauth2-events/events-redis", "oauth2-server/events-redis"]
events-kafka = ["oauth2-events/events-kafka", "oauth2-server/events-kafka"]
events-rabbit = ["oauth2-events/events-rabbit", "oauth2-server/events-rabbit"]

[dev-dependencies]
# Testing
actix-rt = "2.9"
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
cucumber = { version = "0.22", features = ["macros"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
tempfile = "3"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "mongo"] }

# Workspace crates used directly by root integration tests.
oauth2-storage-sqlx = { path = "crates/oauth2-storage-sqlx" }
oauth2-storage-mongo = { path = "crates/oauth2-storage-mongo" }

# Used by integration tests (e.g., migrations and SQL-level assertions).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "chrono", "uuid", "macros", "migrate"] }

[[test]]
name = "bdd"
harness = false
