[package]
name = "oauth2-events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Eventing primitives and best-effort publishers for rust-oauth2-server"
repository = "https://github.com/ianlintner/rust_oauth2_server"

[features]
default = []
events-redis = ["dep:redis"]
events-kafka = ["dep:rdkafka"]
events-rabbit = ["dep:lapin"]

[dependencies]
# Actor-based bus implementation
actix = "0.13"
actix-rt = "2.9"

async-trait = "0.1"
futures = "0.3"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

tracing = "0.1"

tokio = { version = "1.35", features = ["full"] }

opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
tracing-opentelemetry = "0.32"

# Optional backends
redis = { version = "0.25", optional = true, features = ["tokio-comp", "connection-manager"] }
rdkafka = { version = "0.38", optional = true }
lapin = { version = "2.5", optional = true, default-features = false, features = ["rustls"] }
