[package]
name = "oauth2-ports"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ports (traits) for integrating rust-oauth2-server core with custom adapters (storage, etc.)"
repository = "https://github.com/ianlintner/rust_oauth2_server"

[dependencies]
async-trait = "0.1"
oauth2-core = { path = "../oauth2-core", version = "0.1.0" }
