[package]
name = "oauth2-storage-mongo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MongoDB storage adapter for rust-oauth2-server (implements oauth2-ports::Storage)"
repository = "https://github.com/ianlintner/rust-oauth2-server"

[dependencies]
oauth2-core = { path = "../oauth2-core" }
oauth2-ports = { path = "../oauth2-ports" }

async-trait = "0.1"

mongodb = "3.2"
serde = { version = "1.0", features = ["derive"] }
