[package]
name = "oauth2-storage-sqlx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SQLx-backed storage adapter for rust-oauth2-server"
repository = "https://github.com/ianlintner/rust_oauth2_server"

[features]
default = ["sqlite", "postgres"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
async-trait = "0.1"
oauth2-core = { path = "../oauth2-core", version = "0.1.0", features = ["sqlx"] }
oauth2-ports = { path = "../oauth2-ports", version = "0.1.0" }

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "chrono", "uuid", "macros", "migrate"] }

tokio = { version = "1.35", features = ["full"] }
